--- a/templates/resave.html
+++ b/templates/resave.html
@@ -9,12 +9,60 @@
             window.close();
         </script>
     {% endif %}
+    <style>
+        .container {
+          position: relative;
+          width: 90%;
+        }
+        
+        .image {
+          opacity: 1;
+          display: block;
+          width: 100%;
+          height: auto;
+          transition: .5s ease;
+          backface-visibility: hidden;
+        }
+        
+        .middle {
+          transition: .5s ease;
+          opacity: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          text-align: center;
+        }
+        
+        .container:hover .image {
+          opacity: 0.9;
+        }
+        
+        .container:hover .middle {
+          opacity: 1;
+        }
+        
+        .text {
+          background-color: lightskyblue;
+          color: black;
+          font-size: 16px;
+          padding: 16px 32px;
+        }
+        </style>
 </head>
 <body>
     {% for img in image_list %}
-    <a href="{{ url_for('save', name=img.split('static/')[1]) }}">
-    <img src="{{ img }}">
+    <div class="container">
+        <a href="{{ url_for('save', name=img.split('static/')[1]) }}" target="_blank">
+        <img src="{{ img }}" alt="{{ img }}" class="image" style="width:100%">
+        <div class="middle">
+          <div class="text">SAVE</div>
+        </div>
     </a>
+    </div>
+    
+    
     {% endfor %}
 </body>
 </html>`
